backend setup up till controllers-patch