@@ -1,6 +1,5 @@
 package com.motorals.motorals_backend.Security;
 
-import org.springframework.security.core.userdetails.User;
 import com.motorals.motorals_backend.Repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -8,8 +7,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +23,7 @@ public class CustomUserDetailsService implements UserDetailsService {
         return new org.springframework.security.core.userdetails.User(
                 appUser.getEmail(),
                 appUser.getPassword(),
-                Collections.singletonList(new SimpleGrantedAuthority(appUser.getRole().name()))
+                List.of(new SimpleGrantedAuthority(appUser.getRole().name()))
         );
     }
 }
